tests/src/frontend/syntax/invalid/string_escape_too_large.sk
fun main(): String {
  "\U00110000"
}
